src/styles.css
.timekeep-indent {
	display: inline-block;
	height: 1rem;
	width: 0.2rem;
	border-left: 0.2rem solid var(--color-base-40);
}

.timekeep-container {
	width: 100%;
	display: flex;
	flex-flow: column;
	border: 1px solid var(--color-base-30);
}

.timekeep-table {
	width: 100%;
}

.timekeep-table-head {
	background-color: var(--color-base-30);
	position: sticky;
	top: -1px;
	z-index: 1;
}

.timekeep-row {
	width: 100%;
}

.timekeep-row[data-sub-entires="true"] {
	border-bottom: 2px solid var(--color-base-40);
}

.timekeep-row[data-invalid="true"] {
	border-left: 2px solid var(--color-red);
}

.timesheet-editing {
	display: flex;
	flex-flow: column;
	gap: 0.5rem;
	padding: 0.5rem;
	border: 1px solid var(--color-base-40);
	margin: 0.25rem 0;
}

.timesheet-editing-actions {
	display: flex;
	flex-flow: row;
	gap: 0.5rem;
	margin-top: 0.25rem;
	margin-bottom: 0.5rem;
}

.timekeep-input {
	width: 100%;
	margin-top: 0.5rem;
}

.timekeep-row:nth-child(even) {
	background-color: var(--color-base-20);
}

.timekeep-row:nth-child(even):hover {
	background-color: var(--color-base-20);
}

.timekeep-row[data-running="true"] {
	background-color: var(--color-base-40) !important;
}

.timekeep-col {
	vertical-align: middle !important;
}

.timekeep-col--name {
	width: 30%;
	overflow: hidden;
	overflow-wrap: anywhere;
}

.timekeep-col--time {
	width: 20%;
}

.timekeep-col--duration {
	width: 10%;
}

.timekeep-time {
	font-size: 0.8rem;
}

.timekeep-col--actions {
	width: 10%;
	position: relative;
}

.timekeep-actions-wrapper {
	display: flex;
	flex-flow: row;
	gap: 0.5rem;
	flex: auto;
	align-items: center;
	justify-content: center;
	width: 100%;
	height: 100%;
}

.timekeep-action {
	padding: 0.5rem;
	font-size: 0.8rem;
}

.timekeep-timers {
	display: flex;
	flex-flow: row;
	align-items: center;
	justify-content: center;
	width: 100%;
	flex-wrap: wrap;
	white-space: nowrap;
}

.timekeep-timer {
	display: flex;
	flex-flow: column;
	gap: 0rem;
	justify-content: center;
	/* align-items: center; */
	padding: 1rem;
	flex: auto;
	border-right: 1px solid var(--color-base-30);
	border-bottom: 1px solid var(--color-base-30);
}

.timekeep-timer-value {
	font-size: 2.5rem;
	font-weight: bolder;
	line-height: 1;
	margin-bottom: 0.5rem;
}

.timekeep-timer-value-small {
	font-size: 0.9rem;
	font-weight: bold;
}

.timekeep-start {
	align-self: center;
	font-size: 2rem;
	max-height: none;
	height: auto;
	padding: 1rem;
}

.timekeep-name {
	padding: 0.5rem;
	flex: auto;
}

.timekeep-actions {
	display: flex;
	flex-flow: row;
	flex-wrap: wrap;
	gap: 1rem;
	align-items: center;
	padding: 1rem;
}

.active-entry {
	display: flex;
	flex-flow: column;
	gap: 0.25rem;
}

.active-entry__details {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
	font-size: 0.8rem;
}

.timekeep-start-area {
	align-items: center;
	display: flex;
	gap: 1rem;
	padding: 1rem;
	border-bottom: 1px solid var(--color-base-30);
}

.timekeep-name-wrapper {
	display: flex;
	flex-flow: column;
	flex: auto;
	gap: 0.5rem;
	overflow: visible;
	overflow-wrap: anywhere;
}

.button-icon {
	--icon-size: 1em;
}

.text-button-icon {
	--icon-size: 1em;

	margin-right: 0.25rem;
	vertical-align: middle;
}

.timekeep-error {
	padding: 2rem;
}

.timekeep-collapse-icon {
	margin-left: 0.5rem;
	cursor: pointer;
	vertical-align: middle;
}

.timekeep-folder-icon {
	margin-right: 0.5rem;
	cursor: pointer;
	vertical-align: middle;
}

.timekeep-start-note {
	font-size: 0.8rem;
	color: #777;
	margin-left: 0.5rem;
}

.timekeep-path-to-entry {
	display: inline-flex;
	gap: 0.5rem;
}

.timekeep-merge-select-container {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 0.5rem;
	padding-left: 0.75rem;
	padding-top: 1rem;
	font-weight: bold;
}

.timekeep-merge-list-container {
	max-height: 400px;
	overflow-y: auto;
	margin-top: 0.25rem;
	padding: 0.25rem;
}

.timekeep-merge-footer {
	display: flex;
	flex-flow: row;
	gap: 1rem;
	margin-top: 0.5rem;
}

.timekeep-merge-item {
	display: flex;
	align-items: center;
	padding: 0.5rem;
	gap: 0.5rem;
}

.timekeep-merge-item-checkbox {
	margin-right: 0.5rem;
}

.timekeep-merge-item-label {
	flex-grow: 1;

	display: flex;
	flex-flow: column;
}

.timekeep-merge-item-path {
	opacity: 0.7;
}

.timekeep-pick-file-name-input {
	width: 100%;
	margin-bottom: 1rem;
}

.timekeep-status-item {
	display: flex;
	align-items: center;
	gap: 0.5rem;
}

.timekeep-status-item__content {
	display: flex;
	align-items: center;
	gap: 0.25rem;
	cursor: pointer;
}

.timekeep-name-containers {
	display: flex;
	position: relative;
}

.timekeep-suggestions {
	position: absolute;
	top: 100%;
	left: 0;
	z-index: 1000;

	width: 100%;
	max-height: 100px;
	background-color: var(--color-base-20);
	border: 1px solid var(--color-base-30);
	overflow-y: scroll;
	overflow-x: hidden;
	scrollbar-gutter: stable;

	padding: 0.5rem;
	list-style: none;
}

.timekeep-suggestion {
	height: calc((var(--font-ui-small) * var(--line-height-normal)) + 0.5rem);
	width: 100%;
	overflow: hidden;
	text-overflow: ellipsis;
	cursor: pointer;
	white-space: nowrap;
	padding: 0.25rem 0.5rem;
	font-size: var(--font-ui-small);
}

.timekeep-suggestion[aria-selected="true"] {
	background-color: var(--color-base-40);
}

.timekeep-status-item__button {
	cursor: pointer;
	width: 12px !important;
	height: 12px !important;
}

